Lectura Perfil Usuario

--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -24,7 +24,7 @@
         tools:layout="@layout/fragment_favorite" />
     <fragment
         android:id="@+id/profile"
-        android:name="com.bootcampnttdata6.plantshost.features.main.profile.ProfileFragment"
+        android:name="com.bootcampnttdata6.plantshost.features.main.profile.presenter.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
     <fragment
